--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-Use pkg-config --variable pc_path pkg-config to know where are stored .pc files.
-Debug not processed closing events since double buffering is working.
+Manage keyboard and image
