--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
-Manage keyboard and image
+Use pkg-config --variable pc_path pkg-config to know where are stored .pc files.
+Manage keyboard
+Resolve tearing effects
+Resolve segfault, BadDrawable on X_PutImage or
+	not working close button on closing window
+Resolve partial XPutImage
