--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
+In long terms :
 Use pkg-config --variable pc_path pkg-config to know where are stored .pc files.
+Merge from Open gl 2 to vulkan
+
+In short therms :
 Manage keyboard
-Add Image copy manipulation in OSPwin.c:OSPImgBlit
-Resolve performance issues
 
