--- a/TODO
+++ b/TODO
@@ -3,5 +3,7 @@ Use pkg-config --variable pc_path pkg-config to know where are stored .pc files.
 Merge from Open gl 2 to vulkan
 
 In short therms :
+Wrap gl functions
+Manage mouse movment
 Manage keyboard
 
